--- a/packages/state-poc/tsconfig.json
+++ b/packages/state-poc/tsconfig.json
@@ -2,14 +2,13 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./lib",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "composite": true,
+    "noImplicitAny": true
   },
   "references": [
     {
       "path": "../core/tsconfig.json"
-    },
-    {
-      "path": "../react/tsconfig.json"
     }
   ],
   "include": [
